Bevel practically unusable interactively if set to percent amount type #41534

Closed
opened 2014-08-21 23:05:31 +02:00 by Igor Donevski · 5 comments

System Information
OSX, ATI 6770
Blender Version
Broken: 2.71 e1eb2e9
Worked: ..

Short description of error
The range of values (0-1 )is too low to be of any use.
Exact steps for others to reproduce the error
Use bevel on a mesh component and switch to percent amount type. Reuse again interactively, the range is updated in too small increments. The same goes for some other transform tools, can't remember which exactly. Will leave in comment when I find out.

**System Information** OSX, ATI 6770 **Blender Version** Broken: 2.71 e1eb2e9 Worked: .. **Short description of error** The range of values (0-1 )is too low to be of any use. **Exact steps for others to reproduce the error** Use bevel on a mesh component and switch to percent amount type. Reuse again interactively, the range is updated in too small increments. The same goes for some other transform tools, can't remember which exactly. Will leave in comment when I find out.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @el_diablo

Added subscriber: @el_diablo
Bastien Montagne self-assigned this 2014-08-25 16:31:21 +02:00

This issue was referenced by b638696ca6

This issue was referenced by b638696ca6122063312cddce1175535413b3725c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b638696ca6.

Closed by commit b638696ca6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41534
No description provided.